# agno-agentos-rust

./: Cargo.toml  README.md
.github/workflows/: build.yml
api/: agno-agentos-openapi.json
scripts/: check_dirty_files.sh  generate_api_sdk.sh  generate_templates.sh
templates/: model.mustache
templates/reqwest/: api.mustache  api_mod.mustache  configuration.mustache
tests/: api_test.rs  models_test.rs
