[package]
name = "agno-agentos-client"
version = "0.1.0"
edition = "2024"
description = "Rust Client for Agno AgentOS"
license = "MIT"
repository = "https://github.com/nurokhq/agno-agentos-rust"
homepage = "https://github.com/nurokhq/agno-agentos-rust"
documentation = "https://docs.agno.com/reference-api/overview"
authors = ["Rui Zhang <zr@nurok.ai>", "Jian Fang <fj@nurok.ai>"] 
keywords = ["api", "client", "agno", "agentos"]
categories = ["api-bindings"]

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_with = { version = "3.15.1", default-features = false, features = ["base64", "std", "macros"] }
url = { version = "2.5.7" }
reqwest = { version = "0.12.24", features = ["json", "multipart"] }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
